# xdl-portfolio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: agent_finrl.py  drl_agent.py  tb_callback.py
benchmark/: portfolio_benchmark.py
config/: config.py  config_indicators.py  config_models.py  config_tickers.py
environments/: env_finrl.py  env_portfolio_optimisation.py  env_stock_trading.py
examples/: backtesting.ipynb  backtesting.py  custom_environment_agents.ipynb  environment_agents.ipynb  explainability.ipynb  explainability.py  findownloader.ipynb  findownloader.py  findownloader_test.ipynb  finpreprocessor.ipynb  finpreprocessor.py  finpreprocessor_test.ipynb  hyperparameter_tuning.ipynb  hyperparameter_tuning.py  portfolio_optimisation.ipynb  portfolio_optimisation.py  stock_trading.ipynb  wandb.ipynb
explainability/: explainability.py  feature_importance.py  lime_explainability.py  shap_explainability.py
figures/portfolio-optimisation/: test_lime_single_obs_AAPL.html  test_lime_single_obs_CSCO.html  test_lime_single_obs_HON.html  test_lime_single_obs_MSFT.html  test_lime_single_obs_V.html  test_proxy_shap_force_AAPL.html  test_shap_force_AAPL.html
optimisation/: wandb_opt.py
pbenchmark/: portfolio_benchmark.py
preprocessor/: findata_downloader.py  findata_preprocessor.py
report/: Thesis.tex  bibliography.bib  kclthesis.cls
report/algorithms/: alg_a2c.tex  alg_ddpg.tex  alg_ppo.tex  (+4 more)
visualiser/: __init__.py  benchmark_visualiser.py  findata_visualiser.py  model_visualiser.py  shap_visualiser.py  style.mplstyle
(+78 files in other folders)
